# gnc-trainer

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build_release.sh  index.html  todo.md  upload_release.sh
.cargo/: config.toml
assets/levels/: level0.ron  level1.ron  level2.ron  level3.ron  level_list.ron
assets/scripts/: hover.rhai  level1_default.rhai  level2_default.rhai
src/: assets.rs  constants.rs  levels.rs  main.rs  particles.rs  persistence.rs  rhai_api.rs  simulation.rs  ui.rs  ui_old.rs  visualization.rs
src/simulation/: mod.rs  simulation_2d.rs  simulation_3d.rs
src/ui/: messages.rs  mod.rs  plugin.rs
src/visualization/: common.rs  mod.rs
src/visualization/viz_2d/: components.rs  mod.rs  particles.rs  systems.rs
src/visualization/viz_3d/: camera.rs  mod.rs
