[package]
name = "gnc-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["jpeg"] }
bevy_egui = { version = "0.31.1" }
egui_extras = { version = "0.29.1", features = ["syntect"] }
rand = "0.8"
rhai = { version = "1.16", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.1"
bevy-persistent = { version = "0.7.0", features = ["all"] }
dirs = "5.0.1"
bevy-inspector-egui = "0.28.1"
bevy_panorbit_camera = "0.21.2"
big_space = { version = "0.9.1", features = ["camera"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Window",
    "Element",
    "Navigator",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
